--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "owen-it/laravel-auditing": "^14.0",
         "spatie/laravel-permission": "^6.18"
     },
     "require-dev": {
